[package]
name = "lscrypt"
version = "0.1.0"
edition = "2021"
authors = ["Benja Bronxi Muñoz <benja@constata.eu> <https://github.com/bronxi47>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"


